crates/sql-orm/tests/ui/audit_fields_empty_column.rs
use sql_orm::prelude::*;

#[derive(AuditFields)]
struct Audit {
    #[orm(column = "")]
    created_at: String,
}

fn main() {}
